[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
license = "Apache-2.0 OR MIT"
authors = ["Brad Larsen <brad@bradfordlarsen.com>"]
homepage = "https://github.com/bradlarsen/zauber"
repository = "https://github.com/bradlarsen/zauber"
version = "0.1.0"

edition = "2021"
rust-version = "1.70"

publish = false
