[package]
name = "zauber-ast"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

description = "A crate for parsing libmagic `magic` files into abstract syntax"

[dependencies]
bitflags = "2"
mime = "0.3"

[dev-dependencies]
indoc = "2"
