[package]
name = "zauber-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1" }
clap = { version = "4", features = ["derive", "wrap_help", "cargo" ] }
zauber-parser = { path = "../zauber-parser" }
