[package]
name = "zauber-compiler"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
thiserror = { version = "1" }
zauber-ast = { path = "../zauber-ast" }
zauber-ir = { path = "../zauber-ir" }
zauber-parser = { path = "../zauber-parser" }
