[package]
name = "zauber-parser"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bitflags = "2"
escape_string = "0.1"
mime = "0.3"
nom = "7"
thiserror = { version = "1" }
zauber-core = { path = "../zauber-core" }

[dev-dependencies]
indoc = "2"
